Describe the changes made in this commit

--- a/sidemenu.html
+++ b/sidemenu.html
@@ -7,13 +7,23 @@
     }
     li {
       margin: 10px 0;
+      text-transform: uppercase;
+    }
+    div, ul {
+      background-color: black;
+      color: white;
+      font-family: "Poppins";
     }
   </style>
 
   <!-- Define the unordered list -->
-  <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-  </ul>
+  <div>
+    <img src="img/logo.png">
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+  </div>
+
 </template>
